<resources>
    <string name="app_name">FoodApp</string>
    <string name="design_by">Design By \n Suraj</string>
    <string name="waves_of_food">Waves Of Food</string>
    <string name="deliever_favorite_food">Deliever Favorite Food</string>
    <string name="next">NEXT</string>
    <string name="slogan">Enjoy Restaurant Quality Meals \n at Home</string>
    <string name="todo">TODO</string>
    <string name="google">Google</string>
    <string name="don_t_have_account">Don’t Have Account?</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="continue_with">Continue with</string>
    <string name="or">Or</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
    <string name="proceed">Proceed</string>
    <string name="home">Home</string>
    <string name="Cart">Cart</string>
    <string name="lorem_ipsum_is_placeholder_text_commonly_used_in_the_graphic_print_and_publishing_industries_for_previewing_layouts_and_visual">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="order_dispatch">Order Dispatch</string>
    <string name="log_out">Log Out</string>
    <string name="all_item_menu">All Item Menu</string>
    <string name="profile">Profile</string>
    <string name="add_menu">Add Menu</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID_HERE</string>
</resources>