<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="5dp"
    android:background="@color/white"

    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="91dp"
        android:layout_height="92dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/waves_of_food"
        android:textSize="34sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="Sign Up Here For Your \nAdmin Dashboard"
        android:textColor="@color/Green1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/choose_your_location"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="20dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:background="@color/white"
        app:endIconDrawable="@drawable/arrow_circle_down"
        app:endIconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:ignore="MissingConstraints">

        <AutoCompleteTextView
            android:id="@+id/listofLocation"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:text="@string/choose_location" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/Name"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittextshape"
        android:drawableLeft="@drawable/user_02"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Name of Owner"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/RestaurantName"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittextshape"
        android:drawableLeft="@drawable/home_02"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Name of Restaurant"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/Name"
        app:layout_constraintStart_toStartOf="@+id/Name"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <EditText
        android:id="@+id/EmailOrPhone"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittextshape"
        android:drawableLeft="@drawable/mail_02"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/RestaurantName"
        app:layout_constraintStart_toStartOf="@+id/RestaurantName"
        app:layout_constraintTop_toBottomOf="@+id/RestaurantName" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittextshape"
        android:drawableLeft="@drawable/lock_01"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/password"
        android:includeFontPadding="false"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:outlineSpotShadowColor="@color/Green1"
        app:layout_constraintEnd_toEndOf="@+id/EmailOrPhone"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/EmailOrPhone"
        app:layout_constraintTop_toBottomOf="@+id/EmailOrPhone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/CreateAccountButton"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/nextbuttongredent"
        android:text="Create Account"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/Password"
        app:layout_constraintStart_toStartOf="@+id/Password"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <TextView
        android:id="@+id/alreadyhaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Already Have an Account?"
        android:textColor="@color/Green1"
        app:layout_constraintEnd_toEndOf="@+id/CreateAccountButton"
        app:layout_constraintStart_toStartOf="@+id/CreateAccountButton"
        app:layout_constraintTop_toBottomOf="@+id/CreateAccountButton" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/design_by"
        android:textAlignment="center"
        android:textColor="@color/Green1"
        app:layout_constraintEnd_toEndOf="@+id/alreadyhaveAccount"
        app:layout_constraintStart_toStartOf="@+id/alreadyhaveAccount"
        app:layout_constraintTop_toBottomOf="@+id/alreadyhaveAccount" />
</androidx.constraintlayout.widget.ConstraintLayout>